results/SVCOMP/specgen/log-ExSymExeGetStatic-2024_03_06_21_57_43.txt
class Main {

  //@ requires true;
  //@ ensures \result != null;
  public static void main(String[] args) {
    SNode sn = new SNode();
    SNode sn2 = sn.swap();
  }
}

class SNode {
  int elem;
  SNode next;
  static SNode head; // = new SNode(); //change is here

  //@ ensures \result == this;
  public SNode swap() {
    if (head != null) {
      assert false;
      System.out.println("head is not null");
    } else {
      System.out.println("head is null");
    }
    return this;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeGetStatic.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result != null;
               ^
1 error

class Main {

  //@ requires true;
  public static void main(String[] args) {
    SNode sn = new SNode();
    SNode sn2 = sn.swap();
  }
}

class SNode {
  int elem;
  SNode next;
  static SNode head; // = new SNode(); //change is here

  //@ ensures \result == this;
  public SNode swap() {
    if (head != null) {
      assert false;
      System.out.println("head is not null");
    } else {
      System.out.println("head is null");
    }
    return this;
  }
}
